--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>Boatman</title>
     <link rel="shortcut icon" href="./image/logo-titel.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js" > </script>
+    <script type="text/javascript">
+      (function() {
+      emailjs.init("2PUyIfWs5tRWEwOv2");
+      })(); 
+    </script>
 </head>
 <body > 
   <section>
@@ -14,13 +20,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-5 mx-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
           </svg>
-          <a href="">+91 9842523225</a>
+          <a href="tel:+919842523225">+91 9842523225</a>
            </li>
           <li class=" list-none my-auto">|</li>
         <li class="flex my-auto"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-5 mx-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
           </svg>
-          <a href="mailto:">gokulrajagopal.msc@gmail.com</a>
+          <a href="mailto:gokulrajagopal.msc@gmail.com">gokulrajagopal.msc@gmail.com</a>
           </li>
         <li class="flex text-xs my-auto"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-5 mx-2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
@@ -101,8 +107,8 @@
       <div class="flex flex-wrap xl:my-auto ">
         <div class="lg:w-1/2 my-auto  ">
           <div class="  p-16  xl:p-36 xl:mx-auto space-y-6 xl:space-y-11">
-            <h1 class="text-3xl xl:text:5xl  text-gray-300 font-semibold xl:font-bold font-poppin ">Tirupur's Finest Semi-Husked Coconuts - Exported Worldwide</h1>
-            <p class="text-slate-300 xl:text-xl font-inter font-light xl:font-normal">Welcome to Boatman Overseas, your trusted source for premium semi-husked coconuts from the heart of Tirupur, Tamil Nadu. We specialize in exporting the finest quality coconuts to destinations all around the globe.</p>
+            <h1 class="text-3xl xl:text:5xl  text-gray-300 font-semibold xl:font-bold font-poppin ">India's Finest Semi Husked Coconuts - Exported Worldwide</h1>
+            <p class="text-slate-300 xl:text-xl font-inter font-light xl:font-normal">Welcome to Boatman Overseas, your trusted source for premium semi husked coconuts from the heart of Pollachi, Tamil Nadu, India. We specialize in exporting the finest quality coconuts to destinations all around the globe.</p>
             <button class="border p-2 font-semibold font-poppin rounded-lg text-slate-300 hover:bg-secondry">
               <a href="#content_info">Contact Now</a>
             </button>
@@ -143,7 +149,7 @@
         <div class="lg:w-1/2 my-auto container items-center px-16 lg:px-0 space-y-6 md:space-y-10 lg:space-y-10 xl:space-y-12 pt-14 md:pt-10 lg:pt-0">
         <h1 class="text-2xl font-poppin md:text-5xl lg:pt-6 md:font-bold font-semibold">About Us</h1>
           <hr class="border-secondry w-12 -mt-56 lg:-mt-64 top-0 rounded-md border-solid border-4">
-          <p class="font-light font-inter text-primary  text-base md:font-normal md:text-xl lg:text-2xl  space-y-10 md:space-y-12 lg:space-y-14 xl:leading-loose">At Boatman Overseas, we're passionate about connecting the world with the freshest semi-husked coconuts from Tirupur, Tamil Nadu. Our mission is simple: to deliver premium quality coconuts directly from local farmers to customers worldwide. With a focus on sustainability and customer satisfaction, we strive to uphold Tirupur's agricultural heritage while meeting global demands. Experience the taste of Tirupur with us today.
+          <p class="font-light font-inter text-primary  text-base md:font-normal md:text-xl lg:text-2xl  space-y-10 md:space-y-12 lg:space-y-14 xl:leading-loose">At Boatman Overseas, we're passionate about connecting the world with the freshest semi husked coconuts from Pollachi, Tamil Nadu, India. Our mission is  to deliver premium quality coconuts directly from farmers to customers worldwide. With a focus on sustainability and customer satisfaction, we strive to uphold  Pollachi's agricultural heritage while meeting global demands. Experience the taste of  Pollachi with us today.
           </p>
           <button class="border bg-secondry hover:bg-blue-600 hover:text-cyan-50 p-2 text-lg font-poppin font-semibold rounded-lg">
            <span class="flex my-auto"> Read More <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-7">
@@ -167,7 +173,7 @@
       <span>OUR PROCESS<hr class="border-secondry absolute lg:left-80 xl:left-96 xl:translate-x-40 w-14 lg:w-24 xl:w-32 md:mt-2 rounded-md border-solid border-4"></span>
     </h1>
     
-    <p class="text-slate-300 font-inter">At Boatman Overseas, we take pride in our meticulous process to ensure the highest quality semi-husked coconuts reach our customers worldwide:</p>
+    <p class="text-slate-300 font-inter lg:px-72">At Boatman Overseas, we take pride in our meticulous process to ensure the highest quality semi husked coconuts reach our customers worldwide:</p>
     </div>
     <div class="lg:relative leading-7  ">
     <div class=" lg:mt-20   ">
@@ -175,7 +181,7 @@
     <div class="px-12  lg:w-1/2 lg:absolute justify-center lg:text-center  lg:-top-20 lg:left-1/2 lg:transform lg:-translate-x-1/2" >
       <img class="lg:hidden " src="./image/Trust.svg" alt="img">
       <h2 class="text-2xl font-poppin lg:text-xl xl:text-2xl text-secondry font-semibold">Sourcing from Trusted Farmers</h2>
-      <p class="text-slate-300 font-inter lg:text-sm xl:text-lg " >We acquire semi-husked coconuts from trusted farmers in Tirupur, Pollachi, and Coimbatore for their exceptional taste and quality.</p>
+      <p class="text-slate-300 font-inter lg:text-sm xl:text-lg " >We acquire semi husked coconuts from trusted farmers in Pollachi for their exceptional taste and quality.</p>
     </div>
     <div class="px-12 mt-4 lg:mt-0 lg:w-1/4 lg:absolute justify-center lg:p-5 lg:top-24 lg:right-6 " >
       <img class="lg:hidden " src="./image/Descending Sorting.svg" alt="img">
@@ -213,7 +219,10 @@
         </div>
         <div class="lg:w-1/2 my-auto py-8 lg:py-0 max-h-svh container items-center px-16 space-y-10 md:space-y-10 lg:space-y-12 ">
           <h1 class="text-2xl leading-10 font-thin md:text-4xl md:leading-relaxed lg:leading-loose xl:leading-relaxed font-pompiere xl:text-6xl">
-            "Exporting our heritage worldwide, one coconut at a time. From our land to your hands, experience the essence of quality and tradition, shipped globally."
+            "Exporting our heritage worldwide,  
+            From our land to your hands,
+            experience the essence of quality and tradition, 
+            shipped globally."
           </h1>
         </div>
       </div>
@@ -228,7 +237,7 @@
       <div class=" p-12 pt-20  ">
         <h1 class="text-2xl font-poppin md:text-5xl md:font-bold text-slate-200 font-bold">Contact  Us</h1>
         <hr class="border-secondry w-12  top-2 rounded-md border-solid border-4">
-        <p class="font-light font-inter  text-slate-200 space-y-10 lg:space-y-16">We're here to assist you with any inquiries or orders you may have. Get in touch with our team today:</p>  
+        <p class="font-light font-inter  text-slate-200 space-y-10 lg:space-y-16">We're here to assist you with any enquiries or orders you may have. Get in touch with our team today:</p>  
         <!-- Forms -->
 <form action="#" id="contactForm" class="py-8 border px-5  my-5 rounded-lg">
   <div class="lg:flex justify-items-center lg:gap-3 ">
@@ -244,7 +253,7 @@
     <div class="lg:flex justify-items-center lg:gap-x-3">
         <div>
             <label for="country" class="text-slate-100 font-inter">Country:</label>
-            <input type="text" id="email" name="entry.1195376812" placeholder="Country" required class="w-full focus:outline-none h-12 pl-3 rounded-md mt-1">
+            <input type="text" id="country" name="entry.1195376812" placeholder="Country" required class="w-full focus:outline-none h-12 pl-3 rounded-md mt-1">
         </div>
         <div>
             <label for="phone" class="text-slate-100 font-inter">Phone No:</label>
@@ -253,12 +262,12 @@
     </div>
     <label for="message" class="text-slate-100 font-inter">Message:</label>
     <textarea name="entry.254308505" id="message" cols="10" rows="5" placeholder="Type your message here..." required class="w-full focus:outline-none pl-3 pt-2 rounded-md mt-1"></textarea>
-    <button type="submit" id="submitButton" class="border hover:bg-secondry focus:bg-secondry transition-colors duration-500 p-2 rounded-lg mt-2 text-slate-100 font-poppin">
+    <button onclick="sendemail()" type="submit" id="submitButton" class="border hover:bg-secondry focus:scale-95 focus:bg-secondry transition-colors duration-500 p-2 rounded-lg mt-2 text-slate-100 font-poppin">
         Send Message
     </button>
 </form>
 
-      <p class="text-slate-200 font-inter">We look forward to hearing from you and serving your coconut export needs!</p>
+      <p class="text-slate-200 font-inter">We look forward to hear from you and serve your coconut needs!</p>
       <h2 class="text-secondry text-2xl font-semibold font-poppin">Customer Service Hours:</h2>
       <p class="text-slate-200 font-inter">Monday - Friday: 9:00 AM - 5:00 PM (IST)</p>
       </div>
@@ -273,7 +282,8 @@
         </svg>
       </span>
       <h2 class="text-xl font-medium">Speak</h2>
-        <p class="text-lg ">Enquire by call:+919842523225</p>
+        <p class="text-lg ">Enquire by call: <span class="flex-nowrap ">
+          <a href="tel:+919842523225">+91 9842523225</a></span></p>
       </div>
       <div class="text-center py-10 px-7 md:px-2  lg:px-10 md:border-r-2 border-dotted border-black   md:space-y-1 space-y-3">
         <span class="mx-auto"><img class="mx-auto size-12" src="./image/connect.svg" alt="connect">
@@ -288,8 +298,8 @@
         </svg>        
       </span>
       <h2 class="text-xl font-medium">Write</h2>
-        <p class="text-lg">send enquiry to:
-          gokulrajagopal.msc@gmail.com</p>
+        <p class="text-lg">send enquiry to: <span><a href="mailto:gokulrajagopal.msc@gmail.com">gokulrajagopal.msc@gmail.com</a></span>
+          </p>
       </div>
       <div class="absolute bottom-3 right-2">
         <a href="#nav">
@@ -311,7 +321,7 @@
       <div class="border-b-2 md:flex flex-wrap lg:flex-nowrap lg:mb-3 border-dotted">
         <div class="md:w-3/4 lg:w-2/5">
           <img src="./image/logo_foo.png" alt="logo">
-          <p class="text-slate-200 font-light font-poppin">Our vision to lead the global coconut export industry with quality, sustainability, and customer satisfaction, enriching lives worldwide with Tirupur's finest coconuts.</p>
+          <p class="text-slate-200 font-light font-poppin">Our vision to lead the global coconut export industry with quality, sustainability, and customer satisfaction, enriching lives worldwide with Pollachi's finest coconuts.</p>
         </div>
         <div class="list-none mt-2 md:w-1/4 lg:w-1/5 text-slate-200 p-2 space-y-2">
           <h2 class="text-lg font-semibold text-secondry font-poppin">Quick Links</h2>
@@ -332,8 +342,8 @@
         </div>
         <div class="list-none mt-2  md:w-2/4 lg:w-1/5 text-slate-200 p-2 space-y-2">
           <h2 class="text-lg font-semibold font-poppin text-secondry">Contact Us</h2>
-          <li class="font-inter font-light"><a href="">+91 9842523225</a></li>
-          <li class="font-inter font-light"><a href="">gokulrajagopal.msc@gmail.com</a></li>
+          <li class="font-inter font-light"><a href="tel:+919842523225">+91 9842523225</a></li>
+          <li class="font-inter font-light"><a href="mailto:gokulrajagopal.msc@gmail.com">gokulrajagopal.msc@gmail.com</a></li>
           <p class="font-inter font-light">2/900, Gandhiji 1st Street, SR Nagar (south), Andipalayam (po), Mangalam Road, Tirupur - 641687. Contact: 98425</p>
         </div>
       </div>
