--- a/src/Service.html
+++ b/src/Service.html
@@ -14,12 +14,14 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-3 h-5 mx-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
           </svg>
-          +91 9842523225 </li>
+          <a href="tel:+919842523225">+91 9842523225</a>
+           </li>
           <li class=" list-none">|</li>
         <li class="flex"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-5 mx-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
           </svg>
-          gokulrajagopal.msc@gmail.com</li>
+          <a href="mailto:gokulrajagopal.msc@gmail.com">gokulrajagopal.msc@gmail.com</a>
+          </li>
         <li class="flex text-xs"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-5 mx-2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
@@ -30,75 +32,79 @@
 
 <!-- navbar -->
 
-    <section class="flex items-center border bg-gray-100  mx-auto">
-      <nav class="lg:flex w-full top-0 relative">
-        <div class=" flex justify-between ">
-      <a href="#home"><img class="h-14 lg:h-full lg:absolte z-20 " src="./image/logo.svg" alt="logo"></a>
-      <button onclick="toggleMenu()" class="lg:hidden ">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-          <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
-        </svg>
-      </button>
-    </div>
-    <div class=" hidden lg:block -skew-x-12  border-black w-20 xl-w-32 h-24 lg:left-44 lg:top-6 lg:h-24 z-0 lg:absolute xl:left-60 bg-white   ">
+<section id="nav" class="flex items-center border bg-gray-100  mx-auto">
+  <nav class="lg:flex w-full relative ">
+    <div class=" flex justify-between ">
+  <a href="#home"><img class=" h-20 lg:h-24 lg:size-56 lg:absolte z-20 " src="./image/logo.svg" alt="logo"></a>
+  <button onclick="toggleMenu()" class="lg:hidden ">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 mr-2">
+      <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+    </svg>
+  </button>
+</div>
+<div class=" hidden lg:block -skew-x-12  border-black w-20 lg:w-20 xl:w-20 h-24 lg:left-48 lg:top-6 lg:h-20 z-10 lg:absolute xl:left-26 bg-white   ">
 
-    </div>
-      <div  class="ml-auto  md:mt-3 lg:mt-9">
-        <ul id="menu" class="lg:flex my-auto hidden text-slate-200 p-2 w-full m-0 lg:pl-5 ml-auto xl:gap-x-28  lg:gap-x-14  bg-primary px-8 pl-14 xl:pl-14
-        lg:p-6 font-poppin md:text-sm items-center border-gray-950  ">
-          <li  class="p-2 hover:bg-secondry">
-            <a href="./index.html">Home <hr class="border-dash active:#home hidden lg:block"/> </a></li>
-          </li>
-          <li class="p-2 hover:bg-secondry">
-            <a href="./index.html">About Us <hr class="border-dash active:#about hidden lg:block"/></a>
-          </li>
-          <li class="relative  hover:bg-secondry p-2 flex-nowrap group">
-            <a href="./OurProduct.html"> <span class="flex">Our Product <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-            </svg></span> 
-            </a>
-            <ul >
-            <li class=" absolute z-10 w-full top-8 lg:bg-primary lg:p-2 rounded-md lg:shadow-lg hidden group-hover:block  lg:w-32  z-1 text-xs p-3">
-              <a href="./OurProduct.html">Semi-Husked Coconut</a>
-            </li>
-          </ul>
-          </li>
-          <li class="relative  hover:bg-secondry p-2 group">
-            <a href="#semi"> <span class="flex">Services
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-              </svg></span> 
-            </a>
-            <ul class="absolute w-full z-10 top-8 lg:bg-primary lg:p-2 rounded-md lg:shadow-lg hidden group-hover:block  lg:w-32 z-1 text-xs p-3">
-              <li class="mt-1 p-2"><a href="#semi">Services</a></li>
-              <li class="mt-1 p-2"><a href="#mission">Our Mission</a></li>
-              <li class="mt-1 p-2"><a href="#choose">Why Choose Us?</a></li>
-            </ul>
-          </li>
-          <li class="p-2 hover:bg-secondry">
-            <a href="#contact">Contact</a>
-          </li>
-          <li class="hidden lg:flex">
-            <div class="relative">
-            <input class="lg:h-10 lg:w-10 w-10 rounded-lg relative bg-gray-100 lg:rounded-full border-none focus:border-none " type="search" placeholder="search" ><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class=" absolute  top-0 w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-            </svg>
-          </div>
+</div>
+  <div  class="ml-auto  md:mt-3 lg:mt-7">
+    <ul id="menu" class="lg:flex my-auto  hidden text-slate-200   w-full m-0  ml-auto xl:gap-x-28  lg:gap-x-10  bg-primary px-8  pl-1 xl:pl-14 
+    font-poppin md:text-sm lg:font-semibold items-center border-gray-950 ">
+      <li  class=" p-2 lg:py-6  hover:text-secondry lg:border-t-8 lg:border-solid border-secondry">
+        <a href="./index.html">Home  </a></li>
+      </li>
+      <li class="p-2 lg:py-6  hover:text-secondry flex-none focus:border-t-8 focus:border-solid active:border-t-8 active:border-solid active:border-secondry">
+        <a href="./index.html"> About Us </a>
+      </li>
+      <li class="relative p-2 lg:py-6  hover:text-secondry active:lg:border-t-8 active:lg:border-solid active:border-secondry flex-none group">
+        <a href="./OurProduct.html"> <span class="flex">Our Product <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+        </svg></span> 
+        </a>
+        <ul >
+        <li class=" lg:absolute z-10 w-96 hidden top-12 bg-drop bg-opacity-80 text-black lg:p-2 rounded-md lg:shadow-lg group-hover:block  lg:w-32  z-1 text-xs p-3">
+          <a href="./OurProduct.html">Semi-Husked Coconut</a>
+        </li>
+      </ul>
+      </li>
+      <li class="relative p-2 lg:py-6  hover:text-secondry active:lg:border-t-8 active:lg:border-solid active:border-secondry group">
+        <a href="./Service.html"> <span class="flex">Services
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+          </svg></span> 
+        </a>
+        <ul class="lg:absolute  w-full z-10 top-12 bg-drop bg-opacity-80 text-black lg:p-1 rounded-md lg:shadow-lg hidden group-hover:block  lg:w-32 z-1 text-xs p-3">
+          <li class="mt-1 p-2"><a href="#semi">Services</a></li>
+          <li class="mt-1 p-2"><a href="#mission">Our Mission</a></li>
+          <li class="mt-1 p-2"><a href="#choose">Why Choose Us?</a></li>
         </ul>
-      </div>
-      </nav>
-   </section >
+      </li>
+      <li class="p-2 lg:py-6  hover:text-secondry active:lg:border-t-8 active:lg:border-solid active:border-secondry">
+        <a href="./index.html">Contact</a>
+      </li>
+      <li class="w-24 xl:-ml-20 xl: pr-0 hidden lg:flex">
+        <div class="relative">
+          <input type="search" id="searchInput" class="cursor-pointer  relative z-10 h-8 w-8  text-primary rounded-full  bg-white  outline-none  focus:cursor-text  focus:pl-6 " placeholder="Search" />
+          <svg id="searchIcon" xmlns="http://www.w3.org/2000/svg" class="absolute  inset-y-0 z-20 mr-auto h-4  pl-2 stroke-black  focus:stroke-none top-2  cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+          </svg>
+        </div> 
+      </li>
+    </ul>
+  </div>
+  </nav>
+</section >
 
 
-   <!-- Services breadcrum -->
+
 
    <section>
     <div class="border-b-primary ">
         <div>
-            <img src="./image/service_home.png" alt="">
+            <img src="./image/service_img.png" alt="">
         </div>
     </div>
    </section>
+
+      <!-- Services breadcrum -->
    <section class="p-7  ">
    <div class="flex flex-nowrap font-inter font-medium">
     <h2 ><a href="./index.html">Home</a></h2>
@@ -266,7 +272,7 @@
 
 
 <div class="flex justify-center py-5">
-    <button class="font-inter text-center text-white  rounded-lg flex font-semibold p-3 -translate-x-0.5 -translate-y-0.5 bg-secondry hover:bg-blue-300 hover:translate-y-1 hover:translate-x-1">
+    <button class="font-inter text-center text-white  rounded-lg flex scale-100 font-semibold p-3 focus:scale-95 bg-secondry hover:bg-blue-300  ">
         Enquire Now
         <span class="ml-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
@@ -304,8 +310,8 @@
         </div>
         <div class="list-none mt-2  md:w-2/4 lg:w-1/5 text-slate-200 p-2 space-y-2">
           <h2 class="text-lg font-semibold font-poppin text-secondry">Contact Us</h2>
-          <li class="font-inter font-light"><a href="">+91 9842523225</a></li>
-          <li class="font-inter font-light"><a href="">gokulrajagopal.msc@gmail.com</a></li>
+          <li class="font-inter font-light"><a href="tel:+919842523225">+91 9842523225</a></li>
+          <li class="font-inter font-light"><a href="mailto:gokulrajagopal.msc@gmail.com">gokulrajagopal.msc@gmail.com</a></li>
           <p class="font-inter font-light">2/900, Gandhiji 1st Street, SR Nagar (south), Andipalayam (po), Mangalam Road, Tirupur - 641687. Contact: 98425</p>
         </div>
       </div>
