--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <section>
     <div class=" flex flex-wrap bg-primary text-white text-xs space-x-5 justify-end md:p-1 font-inter  list-none">
         <li class=" flex text-xs text-nowrap my-auto" >
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-5 mx-1">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mx-1">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
           </svg>
           <a href="tel:+919842523225">+91 9842523225</a>
@@ -34,36 +34,38 @@
 
 <!-- navbar -->
 
-<section id="nav" class="flex items-center border -mb-0.5 bg-gray-100  mx-auto">
-  <nav class="lg:flex w-full relative ">
-    <div class=" flex justify-between ">
-  <a href="#home"><img class=" lg:pl-16 h-20 lg:h-20 lg:absolte z-20 " src="./image/logo (2).svg" alt="logo"></a>
+<section id="nav" class="flex items-center border  bg-gray-100 " >
+  <nav class="lg:flex w-full  " style="margin-bottom: -1px;">
+    <div class=" flex my-auto mx-auto ml-auto justify-between ">
+  <a href="#home"><img class="pl-5  h-14 lg:h-20 lg:absolte z-20 " src="./image/logo (2).png" alt="logo"></a>
   <button onclick="toggleMenu()" class="lg:hidden ">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 mr-2">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 mr-4">
       <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
     </svg>
   </button>
 </div>
-<div class=" hidden lg:block   border-black w-20 lg:w-14 xl:w-20 h-24 lg:left-56 lg:top-6 lg:h-20 z-10 lg:absolute xl:left-52 bg-white   " style="transform: skewX(-20deg);">
+
 
 </div>
-  <div  class="ml-auto  md:mt-3 lg:mt-7">
-    <ul id="menu" class="lg:flex my-auto hidden text-slate-200   w-full m-0  ml-auto xl:gap-x-28  lg:gap-x-9  bg-primary px-8 lg:px-12  lg:pl-5 xl:pl-14 
-    font-poppin md:text-sm lg:font-semibold items-center ">
-      <li  class="relative  lg:py-7 lg:mr-2  hover:text-secondry  ">
-        <a href="#home"><hr class="absolute -top-0.5 outline-none w-12 h-2 rounded-lg bg-secondry">Home  </a></li>
+  <div  class="ml-auto relative md:mt-3 lg:mt-7 lg:flex">
+    <div class=" hidden lg:block lg:absolute lg:-left-12 w-20 lg:w-20 xl:w-20  lg:h-20 bg-white" style="transform: skewX(-38deg);"></div>
+    <ul id="menu" class="lg:flex my-auto hidden text-slate-200 lg:h-20  w-full m-0  ml-auto xl:gap-x-12  lg:gap-x-5  bg-primary px-8 lg:px-12  lg:pl-16  
+          font-poppin md:text-sm lg:font-semibold items-center ">
+
+      <li  class="relative p-2 lg:p-0  lg:py-7   hover:text-secondry  ">
+        <a href="#home"><hr class=" hidden lg:block absolute -top-0.5 outline-none w-12 h-2 rounded-b-sm bg-secondry">Home  </a></li>
       </li>
       <li class="p-2 lg:py-6  hover:text-secondry flex-none ">
         <a href="#about"> About Us </a>
       </li>
       <li class="relative p-2 lg:py-6   hover:text-secondry   flex-none group">
-        <a href="./OurProduct.html"> <span class="flex">Our Product <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+        <a href="./OurProduct.html#product"> <span class="flex">Our Product <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg></span> 
         </a>
         <ul >
         <li class=" lg:absolute z-10 w-96 hidden top-12 bg-drop bg-opacity-80 text-black lg:p-2 rounded-md lg:shadow-lg group-hover:block  lg:w-32  z-1 text-xs p-3">
-          <a href="./OurProduct.html">Semi-Husked Coconut</a>
+          <a href="./OurProduct.html#semi">Semi Husked Coconut</a>
         </li>
       </ul>
       </li>
@@ -74,19 +76,19 @@
           </svg></span> 
         </a>
         <ul class="lg:absolute  w-full z-10 top-12 bg-drop bg-opacity-80 text-black lg:p-1 rounded-md lg:shadow-lg hidden group-hover:block  lg:w-32 z-1 text-xs p-3">
-          <li class="mt-1 p-2"><a href="./Service.html">Services</a></li>
-          <li class="mt-1 p-2"><a href="./Service.html">Our Mission</a></li>
-          <li class="mt-1 p-2"><a href="./Service.html">Why Choose Us?</a></li>
+          <li class="mt-1 p-2"><a href="./Service.html#semi">Services</a></li>
+          <li class="mt-1 p-2"><a href="./Service.html#mission">Our Mission</a></li>
+          <li class="mt-1 p-2"><a href="./Service.html#choose">Why Choose Us?</a></li>
         </ul>
       </li>
       <li class="p-2 lg:py-6  hover:text-secondry ">
         <a href="#contact">Contact</a>
       </li>
-      <li class="w-24 xl:-ml-20 xl: pr-0 hidden lg:flex">
+      <li class="w-24 xl:-ml-16 xl:pl-5 hidden lg:flex">
         <div class="relative">
           <input type="search" id="searchInput" class="cursor-pointer  relative z-10 h-8 w-8  text-primary rounded-full  bg-white  outline-none  focus:cursor-text pl-4 focus:pl-6 " placeholder="Search" />
-          <div id="searchSuggestions" class="absolute text-black top-full left-0 right-0 bg-drop bg-opacity-80  rounded-lg p-1 hidden"></div>
-          <svg id="searchIcon" xmlns="http://www.w3.org/2000/svg" class="absolute  inset-y-0 z-20 mr-auto h-4  pl-2 stroke-black  focus:stroke-none top-2  cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <div id="searchSuggestions" class="absolute text-black top-full left-0 right-0 bg-drop bg-opacity-80  rounded-lg hidden"></div>
+          <svg id="searchIcon" xmlns="http://www.w3.org/2000/svg" class="absolute  inset-y-0 z-20 mr-auto h-4 pl-2 stroke-black  focus:stroke-none top-2  cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
           </svg>
         </div> 
@@ -99,26 +101,26 @@
    <!-- Hero -->
 
 
-  <section id="Home">
-    <div class="bg-cover  bg-no-repeat  min-h-screen   bg-[url('image/herobg.png')]" >
-      <div class="flex flex-wrap  ">
-        <div class="lg:w-1/2 my-auto  ">
-          <div class="  p-16 lg:p-10  xl:p-36 xl:mx-auto space-y-6  ">
-            <h1 class="text-3xl xl:text-4xl  text-gray-300 font-semibold  lg:space-y-16 font-poppin ">India's Finest Semi Husked Coconuts - Exported Worldwide</h1>
-            <p class="text-slate-300 xl:text-lg font-inter font-light  xl:font-normal">Welcome to Boatman Overseas, your trusted source for premium semi husked coconuts from the heart of Pollachi, Tamil Nadu, India. We specialize in exporting the finest quality coconuts to destinations all around the globe.</p>
-            <button class="border p-2 font-semibold font-poppin rounded-lg text-slate-300 hover:bg-secondry">
+  <section id="Home" >
+    <div class="bg-cover bg-no-repeat top-0 min-h-screen   bg-[url('image/herobg.png')]" >
+      <div class="flex flex-wrap xl:px-16 ">
+        <div class=" lg:w-1/2 xl:w-7/12 2xl:w-1/2 my-auto">
+          <div class="  p-16 lg:p-10  xl:p-0 xl:pl-10 xl:mx-auto space-y-6  ">
+            <h1 class="text-3xl xl:text-5xl  text-gray-300 font-semibold  lg:leading-10 font-poppin ">India's Finest <span class="flex-none">Semi Husked</span>  Coconuts - Exported Worldwide</h1>
+            <p class="text-slate-300 xl:text-lg font-inter font-light ">Welcome to Boatman Overseas, your trusted source for premium semi husked coconuts from the heart of Pollachi, Tamil Nadu, India. We specialize in exporting the finest quality coconuts to destinations all around the globe.</p>
+            <button class="border p-2 font-medium xl:p-3 font-poppin rounded-lg text-slate-300 hover:bg-secondry">
               <a href="#content_info">Contact Now</a>
             </button>
           </div>
         </div>
-        <div class=" lg:w-1/2 mx-auto my-auto p-20 lg:p-0  ">
+        <div class="lg:w-1/2  xl:w-5/12 2xl:w-1/2 mx-auto my-auto p-20 lg:p-0  ">
           <div class="slideshow">
-            <ul class="flex lg:p-20 lg:h-fit">
+            <ul class="flex lg:p-20 xl:p-20 lg:h-fit">
               <li >
                 <img class="h-full hover:shadow-2xl hover:-translate-x-0.5 object-cover" src="./image/hero1.png" alt="image">
               </li>
               <li class="hidden">
-                <img class="h-full hover:shadow-2xl hover:-translate-x-0.5 object-cover" src="./image/hero2.png" alt="image">
+                <img class="h-full rounded-lg hover:shadow-2xl hover:-translate-x-0.5 object-cover" src="./image/hero2.png" alt="image">
               </li>
               <li class="hidden">
                 <img class="h-full hover:shadow-2xl hover:-translate-x-0.5 object-cover" src="./image/hero3.png" alt="image">
@@ -144,7 +146,7 @@
           <img class="min-h-screen object-contain " src="./image/aboutus.png" alt="">
         </div>
         <div class="lg:w-1/2 my-auto container items-center px-16 lg:px-10 space-y-6 md:space-y-10 lg:space-y-2   pt-14 md:pt-10 lg:pt-0">
-        <h1 class="text-2xl font-poppin md:text-3xl lg:pt-6 font-semibold">About Us</h1>
+        <h1 class="text-2xl font-poppin text-primary md:text-3xl lg:pt-6 font-semibold">About Us</h1>
           <hr class="border-secondry w-12 -mt-56 lg:-mt-64 top-0 rounded-md border-solid border-4">
           <p class="font-light font-inter text-primary text-xl lg:pb-8  ">At Boatman Overseas, we're passionate about connecting the world with the freshest semi husked coconuts from Pollachi, Tamil Nadu, India. Our mission is  to deliver premium quality coconuts directly from farmers to customers worldwide. With a focus on sustainability and customer satisfaction, we strive to uphold  Pollachi's agricultural heritage while meeting global demands. Experience the taste of  Pollachi with us today.
           </p>
@@ -166,11 +168,11 @@
   <section class="bg-primary mt-12 py-10 md:m-0">
     <div>
     <div class="p-12 lg:text-center space-y-4  ">
-    <h1 class="text-2xl font-poppin md:text-5xl md:font-bold relative text-slate-200 font-bold">
-      <span>OUR PROCESS<hr class="border-secondry absolute lg:left-80 xl:left-96 xl:translate-x-40 w-14 lg:w-24 xl:w-32 md:mt-2 rounded-md border-solid border-4"></span>
+    <h1 class="text-2xl font-poppin md:text-3xl  relative text-slate-200 font-bold">
+      <span>OUR PROCESS<hr class="border-secondry absolute lg:left-96 xl:left-96 xl:translate-x-40 w-14 lg:w-16 xl:w-20 md:mt-2 rounded-md border-solid border-4"></span>
     </h1>
     
-    <p class="text-slate-300 font-inter lg:px-10">At Boatman Overseas, we take pride in our meticulous process to ensure the highest quality semi husked coconuts reach our customers worldwide:</p>
+    <p class="text-slate-300 font-inter font-light lg:px-10 xl:px-40 xl:text-xl">At Boatman Overseas, we take pride in our meticulous process to ensure the highest quality semi husked coconuts reach our customers worldwide:</p>
     </div>
     <div class="lg:relative leading-7  ">
     <div class=" lg:mt-20   ">
@@ -215,7 +217,7 @@
           <img class="max-h-screen" src="./image/export.png" alt="coconut">
         </div>
         <div class="lg:w-6/12 my-auto  mx-auto py-8   lg:relative lg:py-0 max-h-svh leading-8  items-center  ">
-          <h1 class="text-2xl  md:text-4xl lg:-ml-32 lg:min-w-fit   lg:text-4xl xl:text-5xl  font-pompiere ">
+          <h1 class="text-2xl  md:text-4xl lg:-ml-32 lg:min-w-fit xl:leading-normal   lg:text-4xl xl:text-5xl  font-pompiere ">
             "Exporting our heritage worldwide,<br>  
             From our land to your hands,<br>
             experience the essence of quality and tradition,<br>
@@ -232,9 +234,11 @@
     <img class="absolute z-10 size-32 md:size-auto -mt-9 top-0 right-0 md:-mt-3.5" src="./image/logo.svg" alt="">
     <div class= "min-h-screen md:w-2/3 lg:w-1/2 bg-primary bg-opacity-80">
       <div class=" p-12 pt-20  ">
-        <h1 class="text-2xl font-poppin md:text-5xl md:font-bold text-slate-200 font-bold">Contact  Us</h1>
-        <hr class="border-secondry w-12  top-2 rounded-md border-solid border-4">
-        <p class="font-light font-inter  text-slate-200 space-y-10 lg:space-y-16">We're here to assist you with any enquiries or orders you may have. Get in touch with our team today:</p>  
+        <div class="lg:text-center space-y-2 ">
+          <h1 class="text-2xl font-poppin md:text-3xl  md:font-bold text-slate-200 font-bold">Contact  Us</h1>
+          <span class="relative  "><hr class="border-secondry lg:absolute h-1 -left-20  w-14  rounded-md border-solid border-4"></span>
+          <p class="font-light font-inter  text-slate-200 space-y-10 lg:space-y-16">We're here to assist you with any enquiries or orders you may have. Get in touch with our team today:</p> </div>
+         
         <!-- Forms -->
         <form action="#" id="contactForm" class="py-8 border px-5 my-5 rounded-lg">
           <div class="flex flex-col lg:flex-row justify-between gap-3">
@@ -267,23 +271,23 @@
 
       <p class="text-slate-200 font-inter">We look forward to hear from you and serve your coconut needs!</p>
       <h2 class="text-secondry text-2xl font-semibold font-poppin">Customer Service Hours:</h2>
-      <p class="text-slate-200 font-inter">Monday - Friday: 9:00 AM - 5:00 PM (IST)</p>
+      <p class="text-slate-200 font-inter">Monday - Saturday: 9:00 AM - 5:00 PM (IST)</p>
       </div>
     </div>
   </section>
 
   <section id="content_info" >
-    <div class="md:flex relative py-10 md:py-6 font-poppin">
-      <div class="text-center  py-10 px-7 md:px-2   lg:px-10 md:border-r-2 border-dotted border-black  md:space-y-1 space-y-3">
-        <span class=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-10 h-10 mx-auto">
+    <div class="grid lg:grid-cols-3 relative py-10 md:py-6 font-poppin">
+      <div class="text-center  py-10 px-7 md:px-2   lg:px-10 lg:border-r-2 border-dotted border-black  md:space-y-1 space-y-3">
+        <span class=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-10 h-10 mx-auto text-primary">
           <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
         </svg>
       </span>
       <h2 class="text-xl font-medium">Speak</h2>
-        <p class="text-lg ">Enquire by call: <span class="flex-nowrap ">
-          <a href="tel:+919842523225">+91 9842523225</a></span></p>
+        <p class="text-lg ">Enquire by call: <br> <span class="">
+          <a class="" href="tel:+919842523225">+91 9842523225</a></span></p>
       </div>
-      <div class="text-center py-10 px-7 md:px-2  lg:px-10 md:border-r-2 border-dotted border-black   md:space-y-1 space-y-3">
+      <div class="text-center py-10 px-7 md:px-36  lg:px-10 lg:border-r-2 border-dotted border-black   md:space-y-1 space-y-3">
         <span class="mx-auto"><img class="mx-auto size-12" src="./image/connect.svg" alt="connect">
       </span>
       <h2 class="text-xl font-medium">Connect</h2>
@@ -291,7 +295,7 @@
           2/900, Gandhiji 1st Street, SR Nagar (south), Andipalayam (po), Mangalam Road, Tirupur - 641687. </p>
       </div>
       <div class="text-center  py-10 px-7 md:px-2  lg:px-10 md:space-y-1 space-y-3">
-        <span class=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-10 h-10 mx-auto">
+        <span class=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-10 h-10 mx-auto text-primary">
           <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
         </svg>        
       </span>
@@ -321,13 +325,13 @@
           <img src="./image/logo_foo.png" alt="logo">
           <p class="text-slate-200 font-light font-poppin">Our vision to lead the global coconut export industry with quality, sustainability, and customer satisfaction, enriching lives worldwide with Pollachi's finest coconuts.</p>
         </div>
-        <div class="list-none mt-2 md:w-1/4 lg:w-1/5 text-slate-200 p-2 space-y-2">
-          <h2 class="text-lg font-semibold text-secondry font-poppin">Quick Links</h2>
-          <li class="font-inter font-light"><a href="#home">Home</a></li>
-          <li class="font-inter font-light"><a href="#about">About Us</a></li>
-          <li class="font-inter font-light"><a href="./OurProduct.html">Our Product</a></li>
-          <li class="font-inter font-light"><a href="./Service.html">Services</a></li>
-          <li class="font-inter font-light"><a href="#contact">Contact Us</a></li>
+        <div class="list-none mt-2  md:w-1/4 lg:w-1/5 text-slate-200 p-2 lg:p-2 space-y-2">
+          <h2 class="text-lg  font-semibold text-secondry font-poppin">Quick Links</h2>
+          <li class="font-inter  font-light"><a href="#home">Home</a></li>
+          <li class="font-inter  font-light"><a href="#about">About Us</a></li>
+          <li class="font-inter  font-light"><a href="./OurProduct.html">Our Product</a></li>
+          <li class="font-inter  font-light"><a href="./Service.html">Services</a></li>
+          <li class="font-inter  font-light"><a href="#contact">Contact Us</a></li>
         </div>
         <div class="list-none mt-2 md:w-2/4 lg:w-1/5 text-slate-200 p-2 space-y-2">
           <h2 class="text-lg font-semibold font-poppin text-secondry">Services</h2>
@@ -347,7 +351,7 @@
       </div>
         <div class="text-slate-200 md:flex md:justify-between font-semibold font-poppin">
         <div>
-          <p>©2024BoatmanOverseas. All rights reserved</p>
+          <p>©2024 Boatman Overseas. All rights reserved</p>
         </div>
         <div class="md:flex md:gap-x-6">
           <p>Privacy & Policy</p>
